<resources>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="play">Play</string>
    <string name="question">Make a Question</string>
    <string name="settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Confirm">Confirm </string>
    <string name="username_email">Username / Email</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="invalid_username">Username is required</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">The password requires a minimum of 6 characters</string>
    <string name="invalid_password_compare">Passwords do not match</string>
    <string name="invalid_old_password">The current password is invalid</string>
    <string name="invalid_register">An account with that Email or Username already exists</string>
    <string name="mandatory_code">You need to enter the verification code</string>
    <string name="invalid_code">Invalid code</string>
    <string name="error_email_not_exists">Email is not registered</string>
    <string name="verification_code">Verify code</string>
    <string name="insert_new_password">Insert new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">Username</string>
    <string name="confirm">Confirm</string>
    <!-- FIQUEI AQUI -->
    <string name="send_verification_code">Send verification code</string>
    <string name="password_was_changed">Password changed</string>
    <string name="registration_complete">Register Complete</string>
    <string name="change_password_description">Your password was sucessfully changed. You can use to login next time!</string>
    <string name="register_description">You were succefully registered in Reclaim Portugal. You can now login and start playing!</string>
    <string name="verification_code_1">Verification code was sent <br /> to your e-mail!</string>
    <string name="verification_code_sent">It will be sent a verification code <br /> to your e-mail!</string>
    <string name="login_fail">Invalid login data!</string>
    <string name="code">Verification code</string>
    <string name="change_password">Change password</string>
    <string name="insert_old_password">Insert old password</string>
    <string name="correct_Answer">Correct answer</string>
    <string name="wrong_Answer">Wrong answer</string>
    <string name="questionText">The questions are submited to are team before being published</string>
    <string name="questionSubmited">Your question was submited!</string>
    <string name="questionTextInfo">Your question was sucessfully submit for revision. After being validated by our team it will be added to the game!</string>
    <string name="typeYourQuestion">Write your question</string>
    <string name="submitYourQuestion">Submit your question!</string>
    <string name="ourTeam">Our team:</string>
    <string name="type_yourQuestion">Write your question</string>
    <string name="settingsname">Settings</string>
    <string name="mandatory_question">You need to insert the question!</string>
    <string name="mandatory_answer">You need to insert the answers!</string>
    <string name="app_name" translatable="false">Reclaim Portugal</string>
    <string name="title_activity_main_menu" translatable="false">Main Menu</string>
    <string name="leftNames" translatable="false">Carlos Antunes <br /> Daniel Morais <br /> Eduardo Ferreira</string>
    <string name="rightNames" translatable="false">Jorge Mimoso <br /> Marco Teodoro <br /> Ricardo Ribeiro</string>
    <string name="discover">Discover</string>
    <string name="quick_match">Quick Match</string>
</resources>