<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_main_menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="13">

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">

            <TextView
                android:id="@+id/passchanged"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:fontFamily="@font/candy_beans"
                android:text="@string/password_was_changed"
                android:textColor="@color/white"
                android:textSize="27sp"
                android:typeface="serif"
                android:layout_marginStart="70dp"
                />
            <TextView
                android:id="@+id/questionSubmitedText"
                android:layout_width="410dp"
                android:layout_height="150dp"
                android:fontFamily="@font/candy_beans"
                android:text="@string/change_password_description"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:typeface="serif"
                android:layout_marginStart="70dp"
                android:layout_marginTop="35dp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10">
                    <Button
                        android:id="@+id/mainmenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_activity_main_menu"
                        android:paddingVertical="10dp"
                        android:paddingHorizontal="20dp"
                        android:fontFamily="@font/candy_beans"
                        app:backgroundTint="#E10C0C"
                        app:cornerRadius="20dp"
                        android:textSize="22sp"
                        android:layout_marginStart="100dp"
                        android:layout_centerVertical="true"
                        />

                </RelativeLayout>


            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>